inputのスピンボタンを削除

--- a/app/src/css/Input.css
+++ b/app/src/css/Input.css
@@ -1,18 +1,14 @@
 .outer {
+    position: relative;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 60px;
 }
 
-.input-container {
-    position: relative;
-}
-
-.input-field {
-    font-size: 1.2em;
+input{
+    font-size: 0.8em;
     font-family: 'Arial', sans-serif;
     padding: 10px 20px;
-    width: 200px;
     color: #61DAFB;
     background-color: #282C34;
     border: 1px solid #61DAFB;
@@ -22,27 +18,17 @@
     z-index: 1;
 }
 
-.input-field::placeholder {
+input::placeholder {
     color: #61DAFB;
     opacity: 0.5;
 }
 
-.input-background {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-image: linear-gradient(to right, #282C34, #61DAFB, #282C34);
-    -webkit-background-clip: text;
-    color: transparent;
-    pointer-events: none;
-    z-index: 0;
-    transition: opacity 0.3s ease;
-    opacity: 0.5;
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
-.input-container:focus-within .input-background {
-    opacity: 1;
+input[type="number"] {
+    -moz-appearance: textfield;
 }
