--- a/app/src/css/styles.css
+++ b/app/src/css/styles.css
@@ -15,6 +15,7 @@ h1 {
     background-image: linear-gradient(to right, #282C34, #61DAFB, #282C34); 
     -webkit-background-clip: text;
     color: transparent;
+    margin-bottom: 100px;
 }
 
 h1::before {
