add: 秒数と時間表記の変換ロジックを追加

--- a/app/src/css/InputForm.css
+++ b/app/src/css/InputForm.css
@@ -8,6 +8,7 @@
 input{
     font-size: 1.2em;
     font-family: 'Arial', sans-serif;
+    text-align: center;
     padding: 10px 20px;
     color: #61DAFB;
     background-color: #282C34;
